Bug 298620 - Reloading of Mercator-projected tiles does not work when map is also Mercator-projected
Summary: Reloading of Mercator-projected tiles does not work when map is also Mercator...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.4 (KDE 4.9)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-22 19:41 UTC by tps
Modified: 2012-05-03 21:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tps 2012-04-22 19:41:50 UTC
It is impossible to reload maps from server after changes made

Reproducible: Always
Comment 1 Dennis Nienhüser 2012-04-23 15:52:22 UTC
Do you mean that you cannot force a re-download of OpenStreetMap tile images in Marble after making changes to the OpenStreetMap database? You can use F5 (View -> Redisplay) for that.

Note that there are some delays in between making changes to OpenStreetMap and generating new tiles, see http://help.openstreetmap.org/questions/178/how-often-does-the-main-mapnik-map-get-updated
Comment 2 tps 2012-04-23 16:12:14 UTC
Yes, this is what I meant. But trying F5, even after hours, did not give back the changes I've made. Again and again the same old, incorrect parts. After some time I had a look at what Marble was doing pressing F5: I found it not accessing the Internet, to download tiles again, instead these where just loaded from cache and redrawn!
By comparing with what was written in the manual I decided this being a bug.
Comment 3 Bernhard Beschow 2012-05-03 21:13:43 UTC
Git commit 53f94a6e857612e75ed4455248ed3e726501e3ec by Bernhard Beschow.
Committed on 03/05/2012 at 19:41.
Pushed by beschow into branch 'master'.

make refreshing of tiles (F5) in TileScalingTextureMapper work again

M  +1    -1    src/lib/TileScalingTextureMapper.cpp

http://commits.kde.org/marble/53f94a6e857612e75ed4455248ed3e726501e3ec