make refreshing of tiles (F5) in TileScalingTextureMapper work again

BUG: 298620